--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>长沙旅游助手</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://unpkg.com/jspdf-font/ttfsimsun/simsun-normal.js"></script>
-
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -51,6 +48,11 @@
 
         button:hover {
             background-color: #d35400;
+        }
+
+        button:disabled {
+            background-color: #bdc3c7;
+            cursor: not-allowed;
         }
 
         button.secondary {
@@ -127,6 +129,10 @@
             margin-top: 20px;
         }
 
+        .loading {
+            opacity: 0.6;
+        }
+
         @media (max-width: 600px) {
             .container {
                 padding: 15px;
@@ -171,7 +177,7 @@
             <div id="planDisplay"></div>
             <div class="navigation">
                 <button class="secondary" onclick="backToPlanning()">返回修改</button>
-                <button onclick="downloadPDF()">📄 下载 PDF 行程单</button>
+                <button id="downloadBtn" onclick="downloadPDF()">📄 下载 PDF 行程单</button>
             </div>
         </div>
     </div>
@@ -422,72 +428,206 @@
             updateNavigationButtons();
         }
 
-        // 下载PDF
-        function downloadPDF() {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF();
+        // 文本换行处理函数
+        function splitTextToLines(doc, text, maxWidth) {
+            const words = text.split('');
+            const lines = [];
+            let currentLine = '';
 
-            // 注册 SimSun 字体
-            doc.addFileToVFS("simsun.ttf", simsunFont);  // simsunFont 是插件提供的
-            doc.addFont("simsun.ttf", "simsun", "normal");
-            doc.setFont("simsun");  // 切换为中文字体
+            for (let word of words) {
+                const testLine = currentLine + word;
+                const testWidth = doc.getTextWidth(testLine);
 
-            // 剩下的内容保持不变
-            doc.setFontSize(18);
-            doc.setTextColor(231, 76, 60);
-            doc.text("长沙旅游行程计划", 105, 15, { align: "center" });
-
-            doc.setFontSize(12);
-            doc.setTextColor(0, 0, 0);
-            doc.text(`行程天数: ${selectedDays}天 | 生成时间: ${new Date().toLocaleString("zh-CN")}`, 105, 22, { align: "center" });
-
-            let y = 35;
-            selectedPlans.forEach((dayPlan, index) => {
-                doc.setFontSize(14);
-                doc.setTextColor(231, 76, 60);
-                doc.text(`第 ${index + 1} 天`, 20, y);
-                doc.setTextColor(0, 0, 0);
-                y += 8;
-
-                doc.setFontSize(12);
-                if (dayPlan.morning) {
-                    doc.text(`🌅 上午: ${dayPlan.morning.name}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.morning.description}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.morning.food}`, 20, y);
-                    y += 10;
+                if (testWidth > maxWidth && currentLine.length > 0) {
+                    lines.push(currentLine);
+                    currentLine = word;
+                } else {
+                    currentLine = testLine;
                 }
-                if (dayPlan.noon) {
-                    doc.text(`🍽️ 中午: ${dayPlan.noon.name}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.noon.description}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.noon.food}`, 20, y);
-                    y += 10;
-                }
-                if (dayPlan.evening) {
-                    doc.text(`🌃 晚上: ${dayPlan.evening.name}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.evening.description}`, 20, y);
-                    y += 7;
-                    doc.text(`   ${dayPlan.evening.food}`, 20, y);
-                    y += 15;
-                }
+            }
 
-                if (index < selectedPlans.length - 1) {
-                    doc.line(20, y, 190, y);
-                    y += 10;
-                }
-            });
+            if (currentLine.length > 0) {
+                lines.push(currentLine);
+            }
 
-            doc.setFontSize(10);
-            doc.text("Created by 长沙旅游助手", 190, 285, { align: "right" });
-
-            doc.save(`长沙${selectedDays}日游行程.pdf`);
+            return lines;
         }
 
+        // 下载PDF - 修复中文支持版本
+        function downloadPDF() {
+            try {
+                const downloadBtn = document.getElementById('downloadBtn');
 
+                // 禁用按钮，显示加载状态
+                downloadBtn.disabled = true;
+                downloadBtn.textContent = '正在生成PDF...';
+                downloadBtn.classList.add('loading');
+
+                // 创建一个HTML字符串用于打印
+                let htmlContent = `
+                    <html>
+                    <head>
+                        <meta charset="UTF-8">
+                        <title>长沙旅游行程</title>
+                        <style>
+                            body { 
+                                font-family: 'Microsoft YaHei', SimHei, sans-serif; 
+                                margin: 20px; 
+                                line-height: 1.6;
+                                color: #333;
+                            }
+                            h1 { 
+                                color: #e74c3c; 
+                                text-align: center; 
+                                border-bottom: 2px solid #e74c3c;
+                                padding-bottom: 10px;
+                            }
+                            h2 { 
+                                color: #e74c3c; 
+                                margin-top: 30px;
+                                border-left: 4px solid #e74c3c;
+                                padding-left: 10px;
+                            }
+                            h3 { 
+                                color: #2c3e50; 
+                                margin-top: 20px;
+                            }
+                            .day-section { 
+                                margin-bottom: 30px; 
+                                page-break-inside: avoid;
+                            }
+                            .time-section { 
+                                margin-bottom: 15px; 
+                                padding: 10px;
+                                background-color: #f8f9fa;
+                                border-radius: 5px;
+                            }
+                            .attraction-name { 
+                                font-weight: bold; 
+                                color: #e74c3c;
+                                font-size: 14px;
+                            }
+                            .description { 
+                                margin: 5px 0; 
+                                color: #555;
+                            }
+                            .food-info { 
+                                font-style: italic; 
+                                color: #666;
+                                font-size: 12px;
+                            }
+                            .meta-info {
+                                text-align: center;
+                                color: #666;
+                                font-size: 12px;
+                                margin-bottom: 30px;
+                            }
+                            .footer {
+                                text-align: center;
+                                margin-top: 50px;
+                                padding-top: 20px;
+                                border-top: 1px solid #ddd;
+                                color: #999;
+                                font-size: 10px;
+                            }
+                            @media print {
+                                body { margin: 15px; }
+                                .day-section { page-break-after: auto; }
+                            }
+                        </style>
+                    </head>
+                    <body>
+                        <h1>🌶️ 长沙旅游行程计划</h1>
+                        <div class="meta-info">
+                            行程天数：${selectedDays}天 | 生成时间：${new Date().toLocaleString('zh-CN')}
+                        </div>
+                `;
+
+                selectedPlans.forEach((dayPlan, index) => {
+                    htmlContent += `<div class="day-section">`;
+                    htmlContent += `<h2>📅 第 ${index + 1} 天</h2>`;
+
+                    // 上午行程
+                    if (dayPlan.morning) {
+                        htmlContent += `
+                            <div class="time-section">
+                                <h3>🌅 上午</h3>
+                                <div class="attraction-name">${dayPlan.morning.name}</div>
+                                <div class="description">${dayPlan.morning.description}</div>
+                                <div class="food-info">${dayPlan.morning.food}</div>
+                            </div>
+                        `;
+                    }
+
+                    // 中午行程
+                    if (dayPlan.noon) {
+                        htmlContent += `
+                            <div class="time-section">
+                                <h3>🍽️ 中午</h3>
+                                <div class="attraction-name">${dayPlan.noon.name}</div>
+                                <div class="description">${dayPlan.noon.description}</div>
+                                <div class="food-info">${dayPlan.noon.food}</div>
+                            </div>
+                        `;
+                    }
+
+                    // 晚上行程
+                    if (dayPlan.evening) {
+                        htmlContent += `
+                            <div class="time-section">
+                                <h3>🌃 晚上</h3>
+                                <div class="attraction-name">${dayPlan.evening.name}</div>
+                                <div class="description">${dayPlan.evening.description}</div>
+                                <div class="food-info">${dayPlan.evening.food}</div>
+                            </div>
+                        `;
+                    }
+
+                    htmlContent += `</div>`;
+                });
+
+                htmlContent += `
+                        <div class="footer">
+                            Created by 长沙旅游助手 | 祝您旅途愉快！
+                        </div>
+                    </body>
+                    </html>
+                `;
+
+                // 创建新窗口并打印
+                const printWindow = window.open('', '_blank');
+                printWindow.document.write(htmlContent);
+                printWindow.document.close();
+
+                // 等待内容加载完成后自动打印
+                printWindow.onload = function () {
+                    printWindow.print();
+                    // 打印对话框关闭后关闭窗口
+                    printWindow.onafterprint = function () {
+                        printWindow.close();
+                    };
+                };
+
+                // 恢复按钮状态
+                setTimeout(() => {
+                    downloadBtn.disabled = false;
+                    downloadBtn.textContent = '📄 下载 PDF 行程单';
+                    downloadBtn.classList.remove('loading');
+                }, 1000);
+
+            } catch (error) {
+                console.error('PDF生成失败:', error);
+                alert('PDF生成失败，请重试');
+
+                // 恢复按钮状态
+                const downloadBtn = document.getElementById('downloadBtn');
+                downloadBtn.disabled = false;
+                downloadBtn.textContent = '📄 下载 PDF 行程单';
+                downloadBtn.classList.remove('loading');
+            }
+        }
+
+        // 重置规划器
         function resetPlanner() {
             document.getElementById("step3").classList.add("hidden");
             document.getElementById("step1").classList.remove("hidden");
