--- a/index.html
+++ b/index.html
@@ -184,79 +184,74 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
-        // 完整长沙景点数据
-        const changshaData = {
-            morning: [
-                {
-                    name: "岳麓山",
-                    description: "长沙标志性景点，海拔300米，包含岳麓书院、爱晚亭等古迹",
-                    food: "【附近美食】帅哥烧饼(麓山南路)、向群锅饺(登高路)"
-                },
-                {
-                    name: "橘子洲头",
-                    description: "湘江中的带状岛屿，毛泽东青年艺术雕塑所在地，周末有烟花表演",
-                    food: "【江景餐厅】老长沙龙虾馆、湘江大码头(渔人码头店)"
-                },
-                {
-                    name: "湖南省博物馆",
-                    description: "国家一级博物馆，马王堆汉墓陈列非常震撼，需提前预约",
-                    food: "【步行5分钟】博物馆食堂：毛氏红烧肉、剁椒鱼头"
-                },
-                {
-                    name: "天心阁",
-                    description: "长沙古城墙遗址，明代建筑，可俯瞰长沙老城区",
-                    food: "【附近美食】杨裕兴面馆(百年老店)、双燕楼馄饨"
-                }
-            ],
-            noon: [
-                {
-                    name: "太平老街",
-                    description: "长沙保存最完整的历史老街，青石板路和民国建筑",
-                    food: "【必吃小吃】黑色经典臭豆腐、邵福记梅菜扣肉饼"
-                },
-                {
-                    name: "坡子街",
-                    description: "千年古街，火宫殿总店所在地，民俗表演丰富",
-                    food: "【老字号】火宫殿(红烧肉、姊妹团子)、新华楼(削面)"
-                },
-                {
-                    name: "超级文和友",
-                    description: "复古长沙生活场景，7层楼的空间还原1980年代市井文化",
-                    food: "【招牌菜】文和友龙虾、猪油拌饭、紫苏桃子姜"
-                },
-                {
-                    name: "都正街",
-                    description: "小众文艺街区，保留明清建筑风格，人流量较少",
-                    food: "【特色餐厅】盟重烧烤、客串出品(明星打卡店)"
-                }
-            ],
-            evening: [
-                {
-                    name: "五一广场",
-                    description: "长沙市中心地标，IFS国金中心7楼网红雕塑打卡点",
-                    food: "【网红餐厅】炊烟时代(小炒黄牛肉)、一盏灯(湘菜)"
-                },
-                {
-                    name: "黄兴路步行街",
-                    description: "中国十大步行街之一，3D立体大屏和街头表演",
-                    food: "【夜宵】四娭毑口味虾、伍厚德堂(民国公馆菜)"
-                },
-                {
-                    name: "解放西路酒吧街",
-                    description: "长沙夜生活中心，有众多livehouse和清吧",
-                    food: "【酒吧小吃】COMMUNE(自选餐吧)、酒狸花园(烧烤)"
-                },
-                {
-                    name: "湘江风光带",
-                    description: "沿江景观长廊，适合散步欣赏长沙夜景",
-                    food: "【江边餐厅】老长沙龙虾馆、湘江36号私房菜"
-                }
-            ]
-        };
+        // 完整长沙景点数据（合并在一起）
+        const changshaData = [
+            {
+                name: "岳麓山",
+                description: "长沙标志性景点，海拔300米，包含岳麓书院、爱晚亭等古迹",
+                food: "【附近美食】帅哥烧饼(麓山南路)、向群锅饺(登高路)"
+            },
+            {
+                name: "橘子洲头",
+                description: "湘江中的带状岛屿，毛泽东青年艺术雕塑所在地，周末有烟花表演",
+                food: "【江景餐厅】老长沙龙虾馆、湘江大码头(渔人码头店)"
+            },
+            {
+                name: "湖南省博物馆",
+                description: "国家一级博物馆，马王堆汉墓陈列非常震撼，需提前预约",
+                food: "【步行5分钟】博物馆食堂：毛氏红烧肉、剁椒鱼头"
+            },
+            {
+                name: "天心阁",
+                description: "长沙古城墙遗址，明代建筑，可俯瞰长沙老城区",
+                food: "【附近美食】杨裕兴面馆(百年老店)、双燕楼馄饨"
+            },
+            {
+                name: "太平老街",
+                description: "长沙保存最完整的历史老街，青石板路和民国建筑",
+                food: "【必吃小吃】黑色经典臭豆腐、邵福记梅菜扣肉饼"
+            },
+            {
+                name: "坡子街",
+                description: "千年古街，火宫殿总店所在地，民俗表演丰富",
+                food: "【老字号】火宫殿(红烧肉、姊妹团子)、新华楼(削面)"
+            },
+            {
+                name: "超级文和友",
+                description: "复古长沙生活场景，7层楼的空间还原1980年代市井文化",
+                food: "【招牌菜】文和友龙虾、猪油拌饭、紫苏桃子姜"
+            },
+            {
+                name: "都正街",
+                description: "小众文艺街区，保留明清建筑风格，人流量较少",
+                food: "【特色餐厅】盟重烧烤、客串出品(明星打卡店)"
+            },
+            {
+                name: "五一广场",
+                description: "长沙市中心地标，IFS国金中心7楼网红雕塑打卡点",
+                food: "【网红餐厅】炊烟时代(小炒黄牛肉)、一盏灯(湘菜)"
+            },
+            {
+                name: "黄兴路步行街",
+                description: "中国十大步行街之一，3D立体大屏和街头表演",
+                food: "【夜宵】四娭毑口味虾、伍厚德堂(民国公馆菜)"
+            },
+            {
+                name: "解放西路酒吧街",
+                description: "长沙夜生活中心，有众多livehouse和清吧",
+                food: "【酒吧小吃】COMMUNE(自选餐吧)、酒狸花园(烧烤)"
+            },
+            {
+                name: "湘江风光带",
+                description: "沿江景观长廊，适合散步欣赏长沙夜景",
+                food: "【江边餐厅】老长沙龙虾馆、湘江36号私房菜"
+            }
+        ];
 
         let selectedDays = 1;
         let currentDay = 1;
         let selectedPlans = [];
+        let usedAttractions = new Set(); // 用于跟踪已选择的景点
 
         // 开始规划
         function startPlanning() {
@@ -266,6 +261,7 @@
                 noon: null,
                 evening: null
             }));
+            usedAttractions = new Set();
 
             document.getElementById("step1").classList.add("hidden");
             document.getElementById("step2").classList.remove("hidden");
@@ -315,41 +311,74 @@
             }
         }
 
+        // 获取可用的景点（排除已选择的）
+        function getAvailableAttractions() {
+            return changshaData.filter(attraction => !usedAttractions.has(attraction.name));
+        }
+
         // 渲染某天的规划界面
         function renderDayPlan(day) {
             const planDiv = document.getElementById("dayPlans");
             planDiv.innerHTML = "";
 
             const dayIndex = day - 1;
+            const availableAttractions = getAvailableAttractions();
 
             // 上午选择
             const morningDiv = document.createElement("div");
             morningDiv.className = "time-slot";
             morningDiv.innerHTML = `<h3>🌅 上午行程</h3>`;
-            changshaData.morning.forEach(attraction => {
-                const card = createAttractionCard(attraction, "morning", dayIndex);
+
+            if (selectedPlans[dayIndex].morning) {
+                const card = createAttractionCard(selectedPlans[dayIndex].morning, "morning", dayIndex, true);
                 morningDiv.appendChild(card);
-            });
+            } else {
+                availableAttractions.forEach(attraction => {
+                    const card = createAttractionCard(attraction, "morning", dayIndex);
+                    morningDiv.appendChild(card);
+                });
+            }
             planDiv.appendChild(morningDiv);
 
             // 中午选择
             const noonDiv = document.createElement("div");
             noonDiv.className = "time-slot";
             noonDiv.innerHTML = `<h3>🍽️ 中午行程</h3>`;
-            changshaData.noon.forEach(attraction => {
-                const card = createAttractionCard(attraction, "noon", dayIndex);
+
+            if (selectedPlans[dayIndex].noon) {
+                const card = createAttractionCard(selectedPlans[dayIndex].noon, "noon", dayIndex, true);
                 noonDiv.appendChild(card);
-            });
+            } else {
+                availableAttractions.forEach(attraction => {
+                    // 如果这个景点已经被选为上午的景点，跳过
+                    if (selectedPlans[dayIndex].morning && selectedPlans[dayIndex].morning.name === attraction.name) {
+                        return;
+                    }
+                    const card = createAttractionCard(attraction, "noon", dayIndex);
+                    noonDiv.appendChild(card);
+                });
+            }
             planDiv.appendChild(noonDiv);
 
             // 晚上选择
             const eveningDiv = document.createElement("div");
             eveningDiv.className = "time-slot";
             eveningDiv.innerHTML = `<h3>🌃 晚上行程</h3>`;
-            changshaData.evening.forEach(attraction => {
-                const card = createAttractionCard(attraction, "evening", dayIndex);
+
+            if (selectedPlans[dayIndex].evening) {
+                const card = createAttractionCard(selectedPlans[dayIndex].evening, "evening", dayIndex, true);
                 eveningDiv.appendChild(card);
-            });
+            } else {
+                availableAttractions.forEach(attraction => {
+                    // 如果这个景点已经被选为上午或中午的景点，跳过
+                    if ((selectedPlans[dayIndex].morning && selectedPlans[dayIndex].morning.name === attraction.name) ||
+                        (selectedPlans[dayIndex].noon && selectedPlans[dayIndex].noon.name === attraction.name)) {
+                        return;
+                    }
+                    const card = createAttractionCard(attraction, "evening", dayIndex);
+                    eveningDiv.appendChild(card);
+                });
+            }
             planDiv.appendChild(eveningDiv);
 
             // 显示当前选择
@@ -364,10 +393,10 @@
         }
 
         // 创建景点卡片
-        function createAttractionCard(attraction, timeSlot, dayIndex) {
+        function createAttractionCard(attraction, timeSlot, dayIndex, isSelected = false) {
             const card = document.createElement("div");
             card.className = "attraction-card";
-            if (selectedPlans[dayIndex][timeSlot] && selectedPlans[dayIndex][timeSlot].name === attraction.name) {
+            if (isSelected) {
                 card.classList.add("selected");
             }
 
@@ -378,8 +407,22 @@
             `;
 
             card.onclick = () => {
-                selectedPlans[dayIndex][timeSlot] = attraction;
-                renderDayPlan(currentDay);
+                if (!isSelected) {
+                    // 如果是取消选择
+                    if (selectedPlans[dayIndex][timeSlot] && selectedPlans[dayIndex][timeSlot].name === attraction.name) {
+                        selectedPlans[dayIndex][timeSlot] = null;
+                        usedAttractions.delete(attraction.name);
+                    } else {
+                        // 如果是新选择
+                        // 先取消之前的选择（如果有）
+                        if (selectedPlans[dayIndex][timeSlot]) {
+                            usedAttractions.delete(selectedPlans[dayIndex][timeSlot].name);
+                        }
+                        selectedPlans[dayIndex][timeSlot] = attraction;
+                        usedAttractions.add(attraction.name);
+                    }
+                    renderDayPlan(currentDay);
+                }
             };
 
             return card;
